# Instalog

./: .clang-format  .gitattributes  .gitignore  .hgignore  CMakeLists.txt  Instalog.sln  InstalogCpp.props  InstalogVersion.props  LICENSE.TXT  Prefs.xml  ProtocolBuffers.targets  Rules.xml  TestsPerf.psess  boostbuild.bat  c_flag_overrides.cmake  cxx_flag_overrides.cmake  pecompact.bat
Docs/: DNS.vsd  EECS395.Spring2012.SnyderOneal.ConceptPaper.Instalog.docx  EECS395.Spring2012.SnyderOneal.ConceptPresentation.Instalog.pptx  EECS395.Spring2012.SnyderOneal.FinalPresentation.Instalog.pptx  EECS395.Spring2012.SnyderOneal.InterimReport1Presentation.Instalog.pptx  EECS395.Spring2012.SnyderOneal.InterimReport2Presentation.Instalog.pptx  EECS395.Spring2012.SnyderOneal.ProposalPresentation.Instalog.pptx  Feature Ideas.txt  Final Project Highlights.txt  Firefox.docx  GUI Flowchart.vsd  GUI Mockups.vsd  Gantt Chart.vsd  Graphical User Interface.docx  Security Presentation.pptx  Workflow Drawing Informal Draft.vsd
Docs/Dictionaries/User/: en_user.dict
Docs/Doxygen/: Doxyfile  doxygen.css
Docs/Instalog Design/: .project  .texlipse  InstalogDesign.tex  UML.vsd
Docs/Instalog Manual/: .project  .texlipse  InstalogManual.tex
Docs/Instalog Requirements/: .project  .texlipse  InstalogRequirements.tex
Docs/Instalog Specification/: .project  .texlipse  InstalogSpecification.tex
Docs/Instalog Specification/sections/: Appendices.tex  Future.tex  GraphicalUserInterface.tex  Introduction.tex  LogOutput.tex  OutputFormats.tex  REPAIRACTIONS.TEX  References.tex  RepairActions.tex  ScanningActions.tex  Scripting.tex
Docs/Instalog Specification/snippets/: ie64bit.tex  iewhitelist.tex
Docs/Instalog Testing and Validation/: .project  .texlipse  InstalogTestingAndValidation.tex
Docs/Project Proposal/: .project  .texlipse  ProjectProposal.tex
Docs/Project Report/: .project  .texlipse  ProjectReport.bib  ProjectReport.tex
Docs/liberation-fonts-ttf-1.07.1/: License.txt
Instalog/: CMakeLists.txt  Instalog.rc  Instalog.vcxproj  Instalog.vcxproj.filters  Main.cpp  OlderWindows.masm  SupportedOs.manifest  resource.h
LogCommon/: CMakeLists.txt  Com.cpp  Com.hpp  CommonWhitelists.rc  DdkStructures.h  Dns.cpp  Dns.hpp  EnumClassOperators.hpp  ErrorReporter.cpp  ErrorReporter.hpp  EventLog.cpp  EventLog.hpp  Expected.hpp  File.cpp  File.hpp  HandleCloser.hpp  IlTrace.hpp  InstalogVersion.hpp  Library.cpp  Library.hpp  LoadPointsReport.cpp  LoadPointsReport.hpp  LogAlgorithm.hpp  LogCommon.vcxproj  LogCommon.vcxproj.filters  LogSink.cpp  LogSink.hpp  LogSink_Windows.cpp  MakeUnique.hpp  OptimisticBuffer.hpp  Path.cpp  Path.hpp  Process.cpp  Process.hpp  PseudoHjt.cpp  PseudoHjt.hpp  Registry.cpp  Registry.hpp  RestorePoints.cpp  RestorePoints.hpp  (+38 more)
LogCommon.Tests/: DnsTest.cpp  EventLogTest.cpp  FileTest.cpp  LibraryTest.cpp  LogCommon.Tests.vcxproj  LogCommon.Tests.vcxproj.filters  PathTest.cpp  ProcessTest.cpp  RegistryTest.cpp  ScanningSectionsTest.cpp  ScopedPrivilegeTest.cpp  ScriptingTest.cpp  ServiceControlManagerTest.cpp  SharpStreamsTests.cpp  StockOutputFormatsTest.cpp  StringUtilitiesTest.cpp  WhitelistTest.cpp  Win32ExceptionTest.cpp  Win32GlueTest.cpp  stdafx.cpp  stdafx.h
LogTests/: CMakeLists.txt  DnsTest.cpp  ErrorReporterTest.cpp  EventLogTest.cpp  ExpectedTest.cpp  FileTest.cpp  HandleCloserTest.cpp  LibraryTest.cpp  LogAlgorithmTest.cpp  LogSinkTest.cpp  LogTests.vcxproj  LogTests.vcxproj.filters  PathTest.cpp  ProcessTest.cpp  RegistryTest.cpp  RuntimeDynamicLinkerTest.cpp  ScanningSectionsTest.cpp  ScopedPrivilegeTest.cpp  ScriptingTest.cpp  ServiceControlManagerTest.cpp  SharpStreamsTests.cpp  StockOutputFormatsTest.cpp  StringUtilitiesTest.cpp  TestSupport.hpp  WhitelistTest.cpp  Win32ExceptionTest.cpp  Win32GlueTest.cpp  gtest-all.cc  gtest_main.cc  pch.cpp  pch.hpp
LogTests/TestProjects/TestVerInfoApp/TestVerInfoApp/: Resource.rc
LogWhitelistBuilder/: ExampleWht.txt  ExampleWht.whitelist  LogWhitelistBuilder.vcxproj  LogWhitelistBuilder.vcxproj.filters  Main.cpp
TestProjects/TestVerInfoApp/: TestVerInfoApp.sln
TestProjects/TestVerInfoApp/TestVerInfoApp/: TestVerInfoApp.vcxproj  TestVerInfoApp.vcxproj.filters  main.c
ipch/logcommon-f57e3675/: logcommon-e2660d1c.ipch
