add_library(LogCommon STATIC
    Com.cpp
    Com.hpp
    DdkStructures.h
    Dns.cpp
    Dns.hpp
    EnumClassOperators.hpp
    ErrorReporter.cpp
    ErrorReporter.hpp
    EventLog.cpp
    EventLog.hpp
    Expected.hpp
    File.cpp
    File.hpp
    Library.cpp
    Library.hpp
    LoadPointsReport.cpp
    LoadPointsReport.hpp
    LogAlgorithm.hpp
    LogSink.cpp
    LogSink.hpp
    LogSink_Windows.cpp
    OptimisticBuffer.hpp
    Path.cpp
    Path.hpp
    Process.cpp
    Process.hpp
    Registry.cpp
    Registry.hpp
    RestorePoints.cpp
    RestorePoints.hpp
    ScanningSections.cpp
    ScanningSections.hpp
    ScopedPrivilege.hpp
    ScopeExit.hpp
    Scripting.cpp
    Scripting.hpp
    SecurityCenter.cpp
    SecurityCenter.hpp
    ServiceControlManager.cpp
    ServiceControlManager.hpp
    StockOutputFormats.cpp
    StockOutputFormats.hpp
    StringUtilities.cpp
    StringUtilities.hpp
    UserInterface.hpp
    Utf8.hpp
    Win32Exception.cpp
    Win32Exception.hpp
    Win32Glue.cpp
    Win32Glue.hpp
    Wmi.cpp
    Wmi.hpp
    Wow64.hpp
)
